@startuml

title Strategy obrazac - pravila igre

interface IGameRulesStrategy {
    + IsValidConfiguration(boardSize, winLength) : bool
    + IsWinningMove(moves, lastMove, winLength) : bool
}

class ClassicGameRulesStrategy {
    + IsValidConfiguration(boardSize, winLength) : bool
    + IsWinningMove(moves, lastMove, winLength) : bool
}

class ConnectKGameRulesStrategy {
    + IsValidConfiguration(boardSize, winLength) : bool
    + IsWinningMove(moves, lastMove, winLength) : bool
}

class GameRulesStrategyFactory {
    + GetStrategy(mode) : IGameRulesStrategy
}

class ConsecutiveSymbolsDetector {
    + HasWinningSequence(moves, lastMove, requiredLength) : bool
}

IGameRulesStrategy <|.. ClassicGameRulesStrategy
IGameRulesStrategy <|.. ConnectKGameRulesStrategy

GameRulesStrategyFactory --> IGameRulesStrategy : returns strategy

ClassicGameRulesStrategy --> ConsecutiveSymbolsDetector
ConnectKGameRulesStrategy --> ConsecutiveSymbolsDetector

@enduml
